@@ -2622,4 +2622,171 @@ function geodir_sort_by_review_count_obj($a, $b)
     return $a->review_count < $b->review_count;
 }
 
+/**
+ * Load geodirectory plugin textdomain.
+ *
+ * @since 1.4.2
+ */
+function geodir_load_textdomain() {
+	$locale = apply_filters('plugin_locale', get_locale(), GEODIRECTORY_TEXTDOMAIN);
+	
+	load_textdomain(GEODIRECTORY_TEXTDOMAIN, WP_LANG_DIR . '/' . GEODIRECTORY_TEXTDOMAIN . '/' . GEODIRECTORY_TEXTDOMAIN . '-' . $locale . '.mo');
+	load_plugin_textdomain(GEODIRECTORY_TEXTDOMAIN, false, dirname(plugin_basename(__FILE__)) . '/geodirectory-languages');
+	
+	/**
+	 * Define language constants.
+	 *
+	 * @since 1.0.0
+	 */
+	require_once(geodir_plugin_path() . '/language.php');
+	
+	$language_file = geodir_plugin_path() . '/db-language.php';
+	
+	// Load language string file if not created yet
+	if (!file_exists($language_file)) {
+		geodirectory_load_db_language();
+	}
+	
+	if (file_exists($language_file)) {
+		/**
+		 * Language strings from database.
+		 *
+		 * @since 1.4.2
+		 */
+		try {
+			require_once($language_file);
+		} catch(Exception $e) {
+			error_log('Language Error: ' . $e->getMessage());
+		}
+	}
+}
 
+/**
+ * Load language strings in to file to translate via po editor
+ *
+ * @since 1.4.2
+ *
+ * @global null|object $wp_filesystem WP_Filesystem object.
+ * 
+ * @return bool True if file created otherwise false
+ */
+function geodirectory_load_db_language() {
+	global $wp_filesystem;
+	if( empty( $wp_filesystem ) ) {
+		require_once( ABSPATH .'/wp-admin/includes/file.php' );
+		WP_Filesystem();
+		global $wp_filesystem;
+	}
+	
+	$language_file = geodir_plugin_path() . '/db-language.php';
+	
+	if(is_file($language_file) && !is_writable($language_file))
+		return false; // Not possible to create.
+	
+	if(!is_file($language_file) && !is_writable(dirname($language_file)))
+		return false; // Not possible to create.
+		
+	$contents_strings = array();
+	
+	/**
+	 * Filter the language string from database to translate via po editor
+	 *
+	 * @since 1.4.2
+	 *
+	 * @param array $contents_strings Array of strings.
+	 */
+	$contents_strings = apply_filters('geodir_load_db_language', $contents_strings);
+	
+	$contents_strings = array_unique($contents_strings);
+	
+	$contents_head = array();
+	$contents_head[] = "<?php";
+	$contents_head[] = "/**";
+	$contents_head[] = " * Translate language string stored in database. Ex: Custom Fields";
+	$contents_head[] = " *";
+	$contents_head[] = " * @since 1.4.2";
+	$contents_head[] = " * @package GeoDirectory";
+	$contents_head[] = " */";
+	$contents_head[] = "";
+	$contents_head[] = "// Language keys";
+	
+	$contents_foot = array();
+	$contents_foot[] = "";
+	$contents_foot[] = "?>";
+	
+	$contents = implode(PHP_EOL, $contents_head);
+	
+	if (!empty($contents_strings)) {
+		foreach ( $contents_strings as $string ) {
+			if (is_scalar($string) && $string != '') {
+				$string = str_replace("'", "\'", $string);
+				$contents .= PHP_EOL . "__('" . $string . "', GEODIRECTORY_TEXTDOMAIN);";
+			}
+		}
+	}
+	
+	$contents .= implode(PHP_EOL, $contents_foot);
+		
+	if($wp_filesystem->put_contents( $language_file, $contents, FS_CHMOD_FILE))
+		return false; // Failure; could not write file.
+	
+	return true;
+}
+
+/**
+ * Get the custom fields texts for translation
+ *
+ * @since 1.4.2
+ *
+ * @global object $wpdb WordPress database abstraction object.
+ *
+ * @param  array $translation_texts Array of text strings.
+ * @return array
+ */
+function geodir_load_custom_field_translation($translation_texts = array()) {
+	global $wpdb;
+	
+	// Custom fields table
+	$sql = "SELECT admin_title, admin_desc, site_title, clabels, required_msg FROM " . GEODIR_CUSTOM_FIELDS_TABLE;
+	$rows = $wpdb->get_results($sql);
+	
+	if (!empty($rows)) {
+		foreach($rows as $row) {
+			if (!empty($row->admin_title))
+				$translation_texts[] = stripslashes_deep($row->admin_title);
+				
+			if (!empty($row->admin_desc))
+				$translation_texts[] = stripslashes_deep($row->admin_desc);
+				
+			if (!empty($row->site_title))
+				$translation_texts[] = stripslashes_deep($row->site_title);
+				
+			if (!empty($row->clabels))
+				$translation_texts[] = stripslashes_deep($row->clabels);
+				
+			if (!empty($row->required_msg))
+				$translation_texts[] = stripslashes_deep($row->required_msg);
+		}
+	}
+	
+	// Custom sorting fields table
+	$sql = "SELECT site_title, asc_title, desc_title FROM " . GEODIR_CUSTOM_SORT_FIELDS_TABLE;
+	$rows = $wpdb->get_results($sql);
+	
+	if (!empty($rows)) {
+		foreach($rows as $row) {
+			if (!empty($row->site_title))
+				$translation_texts[] = stripslashes_deep($row->site_title);
+				
+			if (!empty($row->asc_title))
+				$translation_texts[] = stripslashes_deep($row->asc_title);
+				
+			if (!empty($row->desc_title))
+				$translation_texts[] = stripslashes_deep($row->desc_title);
+		}
+	}
+	
+	$contents_strings = !empty($contents_strings) ? array_unique($contents_strings) : $contents_strings;
+	
+	return $translation_texts;
+}
