@@ -15,6 +15,7 @@ Marker cluster not working in maps added via shortcode - FIXED
 Add to fav/remove from fav text now filterable - ADDED
 Awesome font upgraded with new Awesome font version 4.3.0 - ADDED
 After searching for a city not able to search city again without clearing Near input box - FIXED
+Custom fields texts translation added - FIXED
 
 
 v1.4.1
